--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.lifullconnect</groupId>
-  <artifactId>vault-scala</artifactId>
+  <artifactId>vault4s</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
