--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
       <artifactId>json4s-jackson_2.11</artifactId>
       <version>3.6.7</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-parser-combinators_2.11</artifactId>
+      <version>1.1.2</version>
+    </dependency>
   </dependencies>
 
 
